--- a/ProjetEMC/index.html
+++ b/ProjetEMC/index.html
@@ -60,6 +60,19 @@
               </div>
         </div>
       </div>
+      <section class="liberty-section">
+        <h2 class="big-title-two">Les Liberté, au coeur de nos preocupations </h2>
+        <div class="liberty-container">
+          <div class="liberty">
+            <a href="#"class="effect">
+            <h2 class="title">blabla bla</h2>
+            </a>
+          </div>
+
+          <div class="liberty">
+            <h2 class="title">blablou bla</h2>
+
+      </section>
 
 
 
