--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
       </header>
       <div class="landing">
-        <h1 class="big-title">Vive la jeunesse , Vive la france</h1>
+        <h1 class="big-title">Un jeune,<br> pour la france</h1>
         <a href="#delivery" class="delivery-link">
           <span class="scroll-text" data-text="Scroll">Scroll</span>
           <i class="scroll-icon fas fa-angle-down"></i>
@@ -43,12 +43,12 @@
       <h2 class="big-title-two">Votre Candidat...</h2>
         <div class="presentation-container">
           <div class="item1">
-              <h2 class="title">titre à definir</h2>
+              <h2 class="title">Thomas Claye, un candidat pour vous</h2>
               <p>
                 <ul>
-                  <li class="info">J'ai .... ans</li>
-                  <li class="info">les etudes</li>
-                  <li class="info">quatité</li>
+                  <li class="info">J'ai 24 ans. MA jeunnesse sera une force.</li>
+                  <li class="info">blabla </li>
+                  <li class="info">Un programme tout vers la jeunesse. Les jeunes sont notre avenir</li>
                   <li class="info">a definir</li>
                   <li>a definir </li>
                 </ul>
@@ -56,22 +56,82 @@
   
               </div>
           <div class="item2">
-              <img src="pt129510.1338073.jpg" alt="portrait Candidat">
+              <img src="Screenshot_20220319-134745_Snapchat.jpg" alt="portrait Candidat">
               </div>
         </div>
       </div>
       <section class="liberty-section">
         <h2 class="big-title-two">Les Liberté, au coeur de nos preocupations </h2>
         <div class="liberty-container">
+          <div class="liberty-box">
           <div class="liberty">
-            <a href="#"class="effect">
-            <h2 class="title">blabla bla</h2>
-            </a>
+           
+            <h2 class="title">Liberté de pensé</h2>
+            <h3>Quelques mesure pour cette liberté:</h3>
+            <ul>
+              <li class=""></li>
+              <li class=""></li>
+              <li class=""></li>
+              <li class=""></li>
+            </ul>
+            
           </div>
-
           <div class="liberty">
-            <h2 class="title">blablou bla</h2>
+            <h2 class="title">Liberté de la femme</h2>
+            <h3>Quelques mesure pour cette liberté:</h3>
+            <ul>
+              <li class="">Salaire égaux = post égaux</li>
+              <li class="">
+                Les peines seront plus lourde contre les violences contre les femmes.</br>la réclusion criminel a perpetuité  si il y a feminicide 
 
+              </li>
+              <li class="">Parité dans les Entreprise 40% de femmes minimum dans la direction de l'Entreprise</li>
+              <li class="">Démarche du divorce simplifié</li>
+              <li>Renforcement de l'écriture inclusivepour notamment les lettres du gouvernement ou dans les manuels scolaires </li>
+            </ul>
+
+          </div>
+          <div class="liberty">
+            <h2 class="title">Liberté de pensé</h2>
+            <h3>Quelques mesure pour cette liberté:</h3>
+            <ul>
+              <li class=""></li>
+              <li class=""></li>
+              <li class=""></li>
+              <li class=""></li>
+            </ul>
+          </div>
+          <div class="liberty">
+            <h2 class="title">Liberté de ....</h2>
+            <h3>Quelques mesure pour cette liberté:</h3>
+            <ul>
+              <li class=""></li>
+              <li class=""></li>
+              <li class=""></li>
+              <li class=""></li>
+            </ul>
+          </div>
+          <div class="liberty">
+            <h2 class="title">Liberté de ...</h2>
+            <h3>Quelques mesure pour cette liberté:</h3>
+            <ul>
+              <li class=""></li>
+              <li class=""></li>
+              <li class=""></li>
+              <li class=""></li>
+            </ul>
+          </div>
+          <div class="liberty">
+            <h2 class="title">Liberté de ...</h2>
+            <h3>Quelques mesure pour cette liberté:</h3>
+            <ul>
+              <li class=""></li>
+              <li class=""></li>
+              <li class=""></li>
+              <li class=""></li>
+            </ul>
+          </div>
+</div>
       </section>
 
 
